--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extends\" />
+    <Folder Include="Extends\GIF\" />
     <Folder Include="Tools\" />
   </ItemGroup>
 
