新增进度条样式

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -28,4 +28,8 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ProgressBarPage.axaml" />
+  </ItemGroup>
+
 </Project>
