新增扩展图片地址调用，增强网络图片读取

--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -6,11 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AvaloniaXaml Remove="Extends\GIF\**" />
+    <Compile Remove="Extends\GIF\**" />
+    <EmbeddedResource Remove="Extends\GIF\**" />
+    <None Remove="Extends\GIF\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.13" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extends\GIF\" />
     <Folder Include="Tools\" />
   </ItemGroup>
 
