--- a/src/LayuiAvaloniaPack/LayuiApp/LayuiApp.csproj
+++ b/src/LayuiAvaloniaPack/LayuiApp/LayuiApp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove=".gitignore" />
     <None Remove="Assets\1.jpg" />
+    <None Remove="Assets\2.jpg" />
     <None Remove="Assets\动图.gif" />
   </ItemGroup>
   <ItemGroup>
@@ -18,6 +19,9 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaResource Include="Assets\2.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AvaloniaResource>
     <Content Include="Assets\1.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
