添加键盘测试代码

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -32,4 +32,8 @@
     <UpToDateCheckInput Remove="Views\ProgressBarPage.axaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\KeyboardPage.axaml" />
+  </ItemGroup>
+
 </Project>
