调整对话框目录结构

--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Avalonia" Version="0.10.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Notification\" />
+    <Folder Include="Message\" />
+  </ItemGroup>
+
 </Project>
