新增多语言国际化

--- a/src/LayuiAvaloniaPack/Layui.Core/Layui.Core.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Core/Layui.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia" Version="0.10.18" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.18" />
+    <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="0.10.18" />
     <PackageReference Include="Prism.Avalonia" Version="8.1.97.2" />
     <PackageReference Include="Prism.DryIoc.Avalonia" Version="8.1.97.2" />
   </ItemGroup>
