--- a/src/LayuiAvaloniaPack/Layui.Tools/Layui.Tools.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Tools/Layui.Tools.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.18" />
     <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="0.10.18" />
+    <PackageReference Include="Prism.Avalonia" Version="8.1.97.2" />
+    <PackageReference Include="Prism.DryIoc.Avalonia" Version="8.1.97.2" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
 
