提交字体，解决乌班图系统启动问题

--- a/src/LayuiAvaloniaPack/LayuiApp/LayuiApp.csproj
+++ b/src/LayuiAvaloniaPack/LayuiApp/LayuiApp.csproj
@@ -21,6 +21,7 @@
     <None Remove=".gitignore" />
     <None Remove="Assets\1.jpg" />
     <None Remove="Assets\2.jpg" />
+    <None Remove="Assets\Fonts\微软雅黑.ttf" />
     <None Remove="Assets\动图.gif" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +42,9 @@
     <Content Include="Languages\zh-cn.axaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\Fonts\微软雅黑.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\动图.gif">
