--- a/src/LayuiAvaloniaPack/Layui.Core/Layui.Core.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Core/Layui.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.18" />
     <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="0.10.18" />
+    <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="Prism.Avalonia" Version="8.1.97.2" />
     <PackageReference Include="Prism.DryIoc.Avalonia" Version="8.1.97.2" />
   </ItemGroup>
