调整控件以及基础布局样式

--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Avalonia" Version="0.10.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controls\Switch\" />
+  </ItemGroup>
+
 </Project>
