--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Controls\Switch\" />
+    <Folder Include="Style\Default\" />
   </ItemGroup>
 
   <ItemGroup>
