完成选项卡功能
现在选项卡功能以及新增使用Demo，包含MVVM方式

--- a/src/LayuiAvaloniaPack/Code/Layui.Core/Layui.Core.csproj
+++ b/src/LayuiAvaloniaPack/Code/Layui.Core/Layui.Core.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Prism.DryIoc.Avalonia" Version="8.1.97.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Layui.Tools\Layui.Tools.csproj" />
+  </ItemGroup>
+
 </Project>
