--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
@@ -45,4 +45,8 @@
     <UpToDateCheckInput Remove="Views\KeyboardPage.axaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\TabControlPage.axaml" />
+  </ItemGroup>
+
 </Project>
