提交样式以及字体图标测试代码

--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
@@ -56,4 +56,8 @@
     <UpToDateCheckInput Remove="Views\Dialogs\MainView.axaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Fonts\" />
+  </ItemGroup>
+
 </Project>
