--- a/src/LayuiAvaloniaPack/Apps/LayuiApp.Desktop/LayuiApp.Desktop.csproj
+++ b/src/LayuiAvaloniaPack/Apps/LayuiApp.Desktop/LayuiApp.Desktop.csproj
@@ -21,6 +21,7 @@
     <None Remove="Assets\1.jpg" />
     <None Remove="Assets\2.jpg" />
     <None Remove="Assets\AvaloniaLogo.png" />
+    <None Remove="Assets\Fonts\iconfont.ttf" />
     <None Remove="Assets\Fonts\微软雅黑.ttf" />
     <None Remove="Assets\动图.gif" />
   </ItemGroup>
@@ -29,7 +30,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </AvaloniaResource>
     <AvaloniaResource Include="Assets\AvaloniaLogo.png" />
-    <AvaloniaResource Include="Assets\Fonts\微软雅黑.ttf" />
+    <EmbeddedResource Include="Assets\Fonts\iconfont.ttf" />
+    <EmbeddedResource Include="Assets\Fonts\微软雅黑.ttf" />
     <AvaloniaResource Include="Assets\动图.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </AvaloniaResource>
