完成树形控件样式

--- a/src/LayuiAvaloniaPack/Code/Layui.Tools/Layui.Tools.csproj
+++ b/src/LayuiAvaloniaPack/Code/Layui.Tools/Layui.Tools.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\UI\LayUI.Avalonia\LayUI.Avalonia.csproj" />
+  </ItemGroup>
+
 </Project>
