调整按钮组元素，创建封面面板

--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
@@ -60,4 +60,8 @@
     <Folder Include="Fonts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\GridPage.axaml" />
+  </ItemGroup>
+
 </Project>
