--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Layui.Main.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.18" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.18" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.18" />
     <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="0.10.18" />
