--- a/src/LayuiAvaloniaPack/Apps/BusinessApp.Desktop/BusinessApp.Desktop.csproj
+++ b/src/LayuiAvaloniaPack/Apps/BusinessApp.Desktop/BusinessApp.Desktop.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <AssemblyName>BusinessApp</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
