新增图片控件
该功能 增强图片地址加载功能，支持网咯图片

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -37,6 +37,9 @@
     <Compile Update="App.axaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
+    <Compile Update="Views\FlowItemsControlPage.axaml.cs">
+      <DependentUpon>FlowItemsControlPage.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\HomePage.axaml.cs">
       <SubType>Code</SubType>
       <DependentUpon>%(Filename)</DependentUpon>
