更新分割线控件

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -79,4 +79,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\LegendPage.axaml" />
+  </ItemGroup>
+
 </Project>
