完成开关按钮

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -87,4 +87,8 @@
     <UpToDateCheckInput Remove="Views\DrawerPage.axaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\SwitchButtonPage.axaml" />
+  </ItemGroup>
+
 </Project>
