新增选项卡

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -59,6 +59,9 @@
     <Compile Update="Views\NoticeBarPage.axaml.cs">
       <DependentUpon>NoticeBarPage.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\TabControlPage.axaml.cs">
+      <DependentUpon>TabControlPage.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\TextBoxPage.axaml.cs">
       <DependentUpon>TextBoxPage.axaml</DependentUpon>
     </Compile>
