--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -14,9 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Skia" Version="11.0.6" />
+    <PackageReference Include="Avalonia" Version="11.0.7" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.7" />
+    <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.0.7" />
+    <PackageReference Include="Avalonia.Skia" Version="11.0.7" />
   </ItemGroup>
 
 </Project>
