--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/LayUI.Avalonia.csproj
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/LayUI.Avalonia.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Avalonia.Skia" Version="11.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Style\Default\TreeViewStyle.axaml" />
+  </ItemGroup>
+
 </Project>
