完成示例代码

--- a/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
+++ b/src/LayuiAvaloniaPack/Layui.Main/Layui.Main.csproj
@@ -99,4 +99,8 @@
     <UpToDateCheckInput Remove="Views\TreeViewPage.axaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ScrollBarPage.axaml" />
+  </ItemGroup>
+
 </Project>
